[package]
name = "zerozerozero"
version = "0.1.0"
authors = ["Skye Bleed <monarrk@aaathats3as.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = { git = "https://github.com/rustaudio/vst-rs" }


[lib]
name = "000"
crate-type = ["cdylib"]
